--- a/home_page.css
+++ b/home_page.css
@@ -44,3 +44,28 @@ body{
 .nav_avatar{
     width: 40px;
 }
+#banner{
+    color: white;
+    object-fit: contain;
+    height: 644px;
+    background-position: center center;
+    background-size: cover;    
+}
+#banner__contents{
+    margin-left: 70px;
+    padding-top: 340px;
+    height: 190px;
+}
+#banner__title{
+    font-size: 3rem;
+    font-weight: 800;
+    padding-bottom: 0.3rem;
+}
+#banner__description{
+    width: 45rem;
+    line-height: 1.5;
+    padding-top: 1rem;
+    font-size: .9rem;
+    max-width: 360px;
+    height: 80px;
+}
