--- a/home_page.css
+++ b/home_page.css
@@ -69,3 +69,19 @@ body{
     max-width: 360px;
     height: 80px;
 }
+#banner__button{
+    cursor: pointer;
+    color: white;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    border-radius: .2vw;
+    padding-left: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-right: 2rem;
+    margin-right: 1rem;
+    padding-top: .5rem;
+    background-color: rgba(51,51,51,.5);
+    padding-bottom: .5rem;
+}
