--- a/home_page.css
+++ b/home_page.css
@@ -85,3 +85,17 @@ body{
     background-color: rgba(51,51,51,.5);
     padding-bottom: .5rem;
 }
+#banner__button:hover{
+   color: black;
+   background-color: #e6e6e6;
+   transition: all .3s; 
+}
+#banner__fadeBottom{
+    height:7.4rem;
+    background: linear-gradient(
+       180deg,
+       transparent,
+       rgba(37,37,37, .61),
+       #111 
+    );
+}
