--- a/home_page.css
+++ b/home_page.css
@@ -99,3 +99,29 @@ body{
        #111 
     );
 }
+
+.row{
+    margin-left: 20px;
+    color: white;
+}
+.row__poster{
+   object-fit: contain;
+   width: 100%;
+   max-height: 120px;
+   margin-right: 10px;
+   transition: transform 500ms; 
+}
+.row__posters::-webkit-scrollbar{
+    display: none;
+}
+.row__posters{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+.row__poster:hover{
+    transform: scale(1.08);
+}
+
+    
