--- a/home_page.css
+++ b/home_page.css
@@ -126,6 +126,10 @@ body{
 .row__posterLarge,
 .row__posterLarge1,
 .row__posterLarge2{
-    
+    object-fit: contain;
+    width: 100%;
+    max-height: 250px;
+    margin-right: 10px;
+    transition: transform 500rms;    
 }
     
